--- a/practical_part/sa/templates/html/run.html
+++ b/practical_part/sa/templates/html/run.html
@@ -37,8 +37,11 @@
             </select>
         </div>
         <div id="commit">
+            <label for="tempf">Start temperature:</label>
+            <input id="temp" name="tempf" class="block_input">
+            <label for="ratef">Reductionrate:</label>
+            <input id="rate" name="ratef" class="block_input">
             <button class="blue_btng"  type="button" id="rsa">Run</button>
-            <button class="blue_btng"  type="button">Add New Table</button>
         </div>
         <div class="schedule_card" id="new_image_schedule">
             <button class="close" id="new_schedule_close">
