--- a/practical_part/sa/templates/html/run.html
+++ b/practical_part/sa/templates/html/run.html
@@ -36,13 +36,6 @@
                 {% endfor %}
             </select>
         </div>
-        <div id="commit">
-            <label for="tempf">Start temperature:</label>
-            <input id="temp" name="tempf" class="block_input">
-            <label for="ratef">Reductionrate:</label>
-            <input id="rate" name="ratef" class="block_input">
-            <button class="blue_btng"  type="button" id="rsa">Run</button>
-        </div>
         <div class="schedule_card" id="new_image_schedule">
             <button class="close" id="new_schedule_close">
                 <svg class="bi bi-x" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -53,6 +46,16 @@
             <img class="schedule" id="new_schedule">
             <p id="time"></p>
             <p id="runtime"></p>
+        </div>
+        <div id="commit">
+            <label for="tempf">Start temperature:</label>
+            <input id="temp" name="tempf" class="block_input">
+            <label for="ratef">Reductionrate:</label>
+            <input id="rate" name="ratef" class="block_input">
+            <div id="run_button">
+                <button class="blue_btng"  type="button" id="rsa">Run</button>
+            </div>
+            
         </div>
         <div id="render_table">
             {% include "html/table.html" %}
