--- a/practical_part/sa/templates/html/results.html
+++ b/practical_part/sa/templates/html/results.html
@@ -29,7 +29,7 @@
         </h1>
         <labe>Table</labe>
        <div id="r_table">
-        <select id="result_table_select">
+        <select id="result_table_select" class="table_select">
             {% for table in tables %}
                 <option value={{table.id}} class="table_change">
                     {{ table.name }}
