--- a/practical_part/sa/templates/html/run.html
+++ b/practical_part/sa/templates/html/run.html
@@ -28,7 +28,7 @@
         </h1>
         <labe>Table</labe>
         <div id="r_table" class="table">
-            <select id="slected_table">
+            <select id="slected_table" class="table_select">
                 {% for table in tables %}
                     <option value={{table.id}} class="table_change">
                         {{ table.name }}
