--- a/practical_part/sa/templates/html/index.html
+++ b/practical_part/sa/templates/html/index.html
@@ -26,14 +26,23 @@
         <h1 class="main_headline">
             Practical Work
         </h1>
-        <p id="Introduction">
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-        </p>
+        <section id="introduction">
+            <p class="intro">
+                Approach: Simmulated Annealing
+            </p>
+            <p class="intro">
+                Why?
+            </p>
+            <p class="intro">
+                Neighbour: change two instances of one Machine
+            </p>
+        </section>
+        
     </article>
     <footer>
         <p class="f_left">
             Author:
-            Martin Lelils and Robert Rathmann
+            Martin Lelis and Robert Rathmann
         </p>
         <p class="f_right">
             Date: 07.06.2020
