--- a/practical_part/sa/templates/html/results.html
+++ b/practical_part/sa/templates/html/results.html
@@ -53,7 +53,7 @@
     <footer>
         <p class="f_left">
             Author:
-            Martin Lelils and Robert Rathmann
+            Martin Lelis and Robert Rathmann
         </p>
         <p class="f_right">
             Date: 07.06.2020
