--- a/practical_part/sa/templates/html/run.html
+++ b/practical_part/sa/templates/html/run.html
@@ -52,6 +52,8 @@
             <input id="temp" name="tempf" class="block_input">
             <label for="ratef">Reductionrate:</label>
             <input id="rate" name="ratef" class="block_input">
+            <label for="countf">Count:</label>
+            <input id="count" name="countf" class="block_input">
             <div id="run_button">
                 <button class="blue_btng"  type="button" id="rsa">Run</button>
             </div>
@@ -64,7 +66,7 @@
     <footer>
         <p class="f_left">
             Author:
-            Martin Lelils and Robert Rathmann
+            Martin Lelis and Robert Rathmann
         </p>
         <p class="f_right">
             Date: 07.06.2020
