--- a/practical_part/sa/templates/html/run.html
+++ b/practical_part/sa/templates/html/run.html
@@ -54,6 +54,17 @@
             <input id="rate" name="ratef" class="block_input">
             <label for="countf">Count:</label>
             <input id="count" name="countf" class="block_input">
+            <label for="count_if">Count_Increase:</label>
+            <input id="count_i" name="count_if" class="block_input">
+            <label for="saf">SA_Num:</label>
+            <select id="sa_num" class="table_select" name="saf">
+                    <option value=0 class="table_change">
+                        0
+                    </option>
+                    <option value=1 class="table_change">
+                        1
+                    </option>                  
+            </select>
             <div id="run_button">
                 <button class="blue_btng"  type="button" id="rsa">Run</button>
             </div>
