--- a/practical_part/sa/templates/html/index.html
+++ b/practical_part/sa/templates/html/index.html
@@ -27,15 +27,40 @@
             Practical Work
         </h1>
         <section id="introduction">
-            <p class="intro">
-                Approach: Simmulated Annealing
-            </p>
-            <p class="intro">
-                Why?
-            </p>
-            <p class="intro">
-                Neighbour: change two instances of one Machine
-            </p>
+            <div class="intro intr_left">
+                <h3>
+                    Approach: Simmulated Annealing
+                </h3>
+            </div>
+            <div class="intro intr_right">
+                <h3>
+                    Why?
+                </h3>
+            </div>
+            <div class="intro_img intr_left">
+                <h3>
+                    Neighbour code:
+                </h3>
+                <img class="dia" src="static/images/intro_images/neighbour.png">
+            </div>
+            <div class="intro_img intr_right">
+                <h3>
+                    SA code:
+                </h3>
+                <img class="dia" src="static/images/intro_images/sa_code.png">
+            </div>
+            <div class="intro_img intr_left">
+                <h3>
+                    Representation:
+                </h3>
+                <img id="rep" class="dia" src="static/images/intro_images/representation.png">
+            </div>
+            <div class="intro_img intr_right">
+                <h3>
+                    Neighbour: Change two instances of one Machine
+                </h3>
+                <img class="dia" src="static/images/intro_images/nbh.jpg">
+            </div>
         </section>
         
     </article>
