--- a/practical_part/sa/templates/html/result_table.html
+++ b/practical_part/sa/templates/html/result_table.html
@@ -41,7 +41,7 @@
                     {{result.count_increase}}
                 </td>
                 <td>
-                    {{result.sa}}
+                    {{result.sa_num}}
                 </td>
                 <td>
                     <button class="blue_btng show" value={{result.id}} onclick="show_schedule(value)">Show Schedule</button>
