--- a/practical_part/sa/templates/html/index.html
+++ b/practical_part/sa/templates/html/index.html
@@ -28,16 +28,24 @@
         </h1>
         <section id="introduction">
             <div class="intro intr_left">
-                <h3>
+                <h4>
                     Approach: Simmulated Annealing
-                </h3>
+                </h4>
+                <br>
+                <br>
+                <br>
+                <br>
             </div>
             <div class="intro intr_right">
                 <h3>
                     Why?
                 </h3>
+                <br>
+                <p> -Easy to implement </p>
+                <p> -Escape local optima</p>
+                <p> -Always returns a valid solution</p>
             </div>
-            <div class="intro_img intr_left">
+            <div class="intro_img intr_left ">
                 <h3>
                     Neighbour code:
                 </h3>
